# luck

./: Cargo.toml  LICENSE-MIT  README.md  luck.md
src/: db.rs  llm.rs  main.rs  resources.rs  tags.rs  utils.rs  yt.rs
src/commands/: add.rs  ls.rs  mod.rs  retag.rs  rm.rs  stats.rs  sync.rs  topics.rs  weights.rs
