[package]
name = "luck"
version = "1.5.2"
edition = "2021"
authors = ["Hamza Zubair <hamzamohdzubair@gmail.com>"]
description = "A random learning resource picker - opens books, videos, and courses at random locations to spark curiosity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamzamohdzubair/luck"
keywords = ["learning", "random", "education", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8"
walkdir = "2.5"
lopdf = "0.34"
clap = { version = "4.5", features = ["derive"] }
opener = "0.7"
anyhow = "1.0"
dirs = "5.0"
shellexpand = "3.1"
rusqlite = { version = "0.31", features = ["bundled"] }
